--- a/locales/en.json
+++ b/locales/en.json
@@ -1,2 +1,12 @@
 {
+    "ui": {
+        "shell": {
+            "beam_roster": {
+                "edit_traits": "Edit Traits",
+                "edit_traits_title": "Edit Traits",
+                "cancel_traits": "Cancel",
+                "save_traits": "Save & Close"
+            }
+        }
+    }
 }
