--- a/locales/en.json
+++ b/locales/en.json
@@ -2,10 +2,12 @@
     "ui": {
         "shell": {
             "beam_roster": {
-                "edit_traits": "Edit Traits (Preview Version",
-                "edit_traits_title": "Edit Traits",
+                "edit_traits": "Edit Traits",
+                "edit_traits_title": "Edit Traits (Preview)",
                 "cancel_traits": "Cancel",
-                "save_traits": "Save & Close"
+                "save_traits": "Save & Close",
+                "cheat_mode_checkbox": "Unlock Attribute Points",
+                "cheat_mode_tooltip": "Check this box to allow unrestricted attribute incrementing."
             }
         }
     }
