added attributeDistribution to client side to determine max/min values added trait restriction to max of 2 by default added passion_jobs job_uri check for 3rd party mods

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,8 +6,8 @@
                 "add_traits_title": "Add Trait",
                 "add_traits_hint": "Note: Click on a trait icon to add trait to hearthling.",
                 "close_traits": "Close",
-                "cheat_mode_checkbox": "Unlock Attribute Points",
-                "cheat_mode_tooltip": "Check this box to allow unrestricted attribute incrementing."
+                "cheat_mode_checkbox": "Unlock Attribute & Trait restrictions",
+                "cheat_mode_tooltip": "Check this box to allow unrestricted settings for Attributes and Traits."
             }
         }
     }
